--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -149,14 +149,14 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>590</x>
+      <x>337</x>
       <y>0</y>
-      <width>518</width>
+      <width>771</width>
       <height>26</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <item>
+     <item alignment="Qt::AlignRight">
       <widget class="QCheckBox" name="checkBox">
        <property name="text">
         <string>Process Contiously</string>
@@ -185,9 +185,9 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>300</x>
       <y>460</y>
-      <width>371</width>
+      <width>431</width>
       <height>71</height>
      </rect>
     </property>
@@ -428,10 +428,10 @@
     <widget class="QLabel" name="labeltext">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>10</x>
        <y>20</y>
-       <width>121</width>
-       <height>16</height>
+       <width>141</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="text">
@@ -462,6 +462,9 @@
      <string>Others</string>
     </property>
     <widget class="QMenu" name="menuInvert_2">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="title">
       <string>Invert</string>
      </property>
@@ -473,6 +476,7 @@
     <addaction name="actionResize"/>
     <addaction name="actionNormalise"/>
     <addaction name="actionThreshold"/>
+    <addaction name="actionOtsuThreshold"/>
    </widget>
    <widget class="QMenu" name="menuHistogram">
     <property name="title">
@@ -1101,6 +1105,11 @@
   <action name="actionPdf">
    <property name="text">
     <string>pdf</string>
+   </property>
+  </action>
+  <action name="actionOtsuThreshold">
+   <property name="text">
+    <string>Otsu Threshold</string>
    </property>
   </action>
  </widget>
